PROJECT(${PYTHONLAB_BINARY})
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/3rdparty/qtsingleapplication)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/util)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/pythonlab-library)

SET(RESOURCES ../resources_source/resources.qrc)
QT4_ADD_RESOURCES(RESOURCES_RCC ${RESOURCES})
SET(RC_FILE ../resources_source/resources.rc)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${RESOURCES_RCC} ${RC_FILE})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PYTHONLAB_LIBRARY} ${AGROS_UTIL} ${QTSINGLEAPPLICATION_LIBRARY})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY})
