PROJECT(${PYTHONLAB_BINARY})
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/3rdparty/qtsingleapplication)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/util)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/pythonlab-library)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${RESOURCES_RCC} ${RC_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PYTHONLAB_LIBRARY} ${AGROS_UTIL} ${QTSINGLEAPPLICATION_LIBRARY})
IF(WITH_QT5)
  QT5_USE_MODULES(${PROJECT_NAME} Core Widgets Network Xml XmlPatterns WebKit WebKitWidgets OpenGL)
ENDIF(WITH_QT5)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME agros_pythonlab)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
